infra/producer/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ip-core-dispatcher
  namespace: ip
spec:
  type: ClusterIP
  selector:
    component: ip-core-dispatcher
  ports:
    - port: 80
      targetPort: 8082
