infra/producer/ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ip-core-dispatcher
  namespace: ip
  annotations:
    kubernetes.io/ingress.class:  nginx
spec:
  rules:
    - host: consumer-dev.liquidtelecom.co.za
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ip-core-dispatcher
                port:
                  number: 80
